Spacing fixes

--- a/dev/web/css/main.css
+++ b/dev/web/css/main.css
@@ -174,7 +174,6 @@ h6 {
 }
 
 p {
-    margin: 0 0 20px 0;
 }
 
 a,
@@ -190,9 +189,7 @@ a:hover {
 }
 
 img {
-    /*max-width: 640px;*/
     max-width: 100%;
-    margin: 5px 0 0 0;
 }
 
 ul ul {
@@ -205,21 +202,19 @@ nav ul {
     padding: 0;
 }
 
-figure {
-    margin: 0 0 20px 0;
-}
-
-figcaption {
-    padding: 5px 0;
-    border-left: 1px solid #ccc;
-    border-right: 1px solid #ccc;
-    border-bottom: 1px solid #ccc;
-    font-size: 13px;
+figure,
+.figure {
     text-align: center;
 }
 
+figcaption,
+.figure span {
+    padding: 5px 0;
+    display: block;
+    font-size: 13px;
+}
+
 blockquote {
-    margin: 0 0 20px 0;
     padding: 1em 40px;
     background: #eee;
 }
@@ -233,7 +228,6 @@ blockquote p {
     }
 
 pre {
-    margin: 0 0 20px 0;
     padding: 1em 40px;
     background: #eee;
 }
@@ -432,15 +426,24 @@ body,
 }
 
 .post header {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 .post h1 {
+    margin: 0;
     text-align: center;
 }
 
+.post h2,
+.post h3,
+.post h4,
+.post h5,
+.post h6 {
+    margin: 1.5em 0 0 0;
+}
+
 .post .post-meta {
-    margin: 0 0 10px 0;
+    margin: 0;
     font-size: 13px;
     color: #666;
     text-align: center;
